# eaglelog

./: .gitignore  README.md  eaglelog.cabal  stack.yaml
app/: Main.hs
src/: EagleTree.hs
test/: Bench.hs  Spec.hs  sample.FDR
