name:                eaglelog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dustin/eaglelog#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Sallings
maintainer:          dustin@spy.net
copyright:           2017 Dustin Sallings
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EagleTree
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , bytestring
                     , containers
                     , vector
                     , cassava
  default-language:    Haskell2010

executable eaglelog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , eaglelog
  default-language:    Haskell2010

test-suite eaglelog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test-framework, test-framework-hunit, test-framework-quickcheck2
                     , HUnit, QuickCheck, HUnit-approx
                     , eaglelog
                     , bytestring
                     , cassava
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dustin/eaglelog
