name:                eaglelog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dustin/eaglelog#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Sallings
maintainer:          dustin@spy.net
copyright:           2017 Dustin Sallings
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EagleTree
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , bytestring
                     , containers
                     , vector
                     , cassava
                     , deepseq
  default-language:    Haskell2010
  ghc-options:       -Wall

executable eaglelog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , eaglelog
                     , cassava
                     , vector
  default-language:    Haskell2010
  ghc-options:        -O2 -Wall

test-suite eaglelog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty, tasty-hunit, tasty-quickcheck
                     , HUnit, QuickCheck, HUnit-approx
                     , eaglelog
                     , bytestring
                     , cassava
                     , vector
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark eaglelog-bench
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Bench.hs
  build-depends:      base
                    , eaglelog
                    , bytestring
                    , criterion
                    , cassava
                    , parallel
  ghc-options:        -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dustin/eaglelog
